--- a/pages/about.html
+++ b/pages/about.html
@@ -58,7 +58,7 @@ DEFAULT: '8px',
   </div>
 </nav>
 <section class="pt-20 relative">
-<div class="absolute inset-0 bg-[url('/images/zani.JPG')] bg-cover bg-center opacity-20"></div>
+<div class="absolute inset-0 bg-[url('../images/zani.JPG')] bg-cover bg-center opacity-20"></div>
 <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-24">
 <h1 class="text-5xl font-playfair text-center mb-6">About</h1>
 <p class="text-xl text-center text-gray-600 max-w-3xl mx-auto">
@@ -81,7 +81,7 @@ Zani's Plant Based Cakes was born from a passion for creating beautiful, delicio
 </p>
 </div>
 <div>
-<img src="/images/cupcakes.png" alt="Our Founder" class="rounded-lg shadow-xl w-full h-[600px] object-cover">
+<img src="../images/cupcakes.png" alt="Our Founder" class="rounded-lg shadow-xl w-full h-[600px] object-cover">
 </div>
 </div>
 </div>
